--- a/index2.html
+++ b/index2.html
@@ -190,16 +190,6 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <br>
-	<center>
-<div id="game-text2" 
-	style="
-    width: 60%;
-    height: 50px;
-    overflow-y: auto;
-    border: 4px solid black;
-    padding: 6px;
-">
-</div>
 
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
@@ -209,9 +199,9 @@ div.mycontainer {
     <div class="grid-item"><a href = "test3.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">Adventure Game Page</button></a></div>
     <div class="grid-item"><a href = "test4.html" style = “color:black”; target = “_blank”;>
-<button class = "button-transition">Chuck's Work Videos</button></a></div>
+<button class = "button-transition">Chuck's Old Webpage</button></a></div>
     <div class="grid-item"><a href = "https://www.youtube.com/@chuckzavos7886/videos?app=desktop&view=0&sort=dd&shelf_id=2" style = “color:black”; target = “_blank”;>
-<button class = "button-transition">New Page Link5</button></a></div>
+<button class = "button-transition">Chuck's Work Videos</button></a></div>
 <div class="grid-item"></div>
 <div class="grid-item"></div>
     <div class="grid-item"><a href = "test6.html" style = “color:black”; target = “_blank”;>
