--- a/index2.html
+++ b/index2.html
@@ -194,8 +194,8 @@ div.mycontainer {
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">Adventure Game</button></a></div>
-    <div class="grid-item"><a href = "test2.html" style = “color:black”; target = “_blank”;>
-<button class = "button-transition">New Page Link2</button></a></div>
+    <div class="grid-item"><a href = "https://soundcloud.com/chuckcheapburied" style = “color:black”; target = “_blank”;>
+<button class = "button-transition">Chuck's Music Page</button></a></div>
     <div class="grid-item"><a href = "test3.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">Adventure Game Page</button></a></div>
     <div class="grid-item"><a href = "test4.html" style = “color:black”; target = “_blank”;>
@@ -204,8 +204,8 @@ div.mycontainer {
 <button class = "button-transition">Chuck's Work Videos</button></a></div>
 <div class="grid-item"></div>
 <div class="grid-item"></div>
-    <div class="grid-item"><a href = "test6.html" style = “color:black”; target = “_blank”;>
-<button class = "button-transition">New Page Link6</button></a></div>
+    <div class="grid-item"><a href = "https://www.linkedin.com/in/chuckzavos/" style = “color:black”; target = “_blank”;>
+<button class = "button-transition">Chuck's LinkedIn Page</button></a></div>
 </div>
 </div>
 
