--- a/test4.html
+++ b/test4.html
@@ -177,8 +177,8 @@
     <h2>My Favorite Drinks</h2>
     <ul class="list-style2">
         <li>Coffee</li>
-        <li>Tea</li>
-        <li>Orange Juice</li>
+        <li>Green Tea</li>
+        <li>Lemonade</li>
     </ul>
 </div>
 <div>
@@ -193,7 +193,7 @@
 <section class = "video">
     <h2>My Favorite Video</h2>
     <video width="480" height="360" controls>
-        <source src="https://live.staticflickr.com/video/48258241016/031646f929/360p.mp4?s=eyJpIjo0ODI1ODI0MTAxNiwiZSI6MTc0MjQxOTA0NCwicyI6IjQ2MTRjYjIzYTUzYWQzOGE5MzJhMjc5NzI5MTAyZjRjNWE1M2YyOWQiLCJ2IjoxfQ">
+        <source src="https://github.com/CZavos/This_is_it/blob/main/OMG.mp4.wmv?raw=True">
         Your browser does not support the video tag.
     </video>
 </section>
