--- a/test4.html
+++ b/test4.html
@@ -193,7 +193,7 @@
 <section class = "video">
     <h2>My Favorite Video</h2>
     <video width="480" height="360" controls>
-        <source src="https://github.com/CZavos/This_is_it/blob/main/OMG.mp4.wmv?raw=True">
+        <source src="https://github.com/CZavos/This_is_it/blob/main/OMG.mp4.mp4?raw=True">
         Your browser does not support the video tag.
     </video>
 </section>
