--- a/index2.html
+++ b/index2.html
@@ -227,12 +227,12 @@ div.mycontainer {
             <th>Hours/Week</th>
         </tr>
         <tr>
-            <td>1st hobby</td>
-            <td>time</td>
+            <td>Reading</td>
+            <td>11 hours</td>
         </tr>
         <tr>
-            <td>2nd hobby</td>
-            <td>time</td>
+            <td>Recording Music</td>
+            <td>4 hours</td>
         </tr>
     </table></div>
     <div class="grid-item"></div><div class="grid-item"></div>
@@ -243,12 +243,12 @@ div.mycontainer {
             <th>Year</th>
         </tr>
         <tr>
-            <td>1st Movie</td>
-            <td>Movie Year</td>
+            <td>This Is Spinal Tap</td>
+            <td>1984</td>
         </tr>
         <tr>
-            <td>2nd Movie</td>
-            <td>Movie Year</td>
+            <td>The Big Sleep</td>
+            <td>1946</td>
         </tr>
     </table></div>
 </div>
@@ -276,7 +276,7 @@ div.mycontainer {
     <ul class="list-style2">
         <li>Coffee</li>
         <li>Tea</li>
-        <li>Orange Juice</li>
+        <li>Lemonade</li>
     </ul>
 </div>
 </div>
