--- a/index2.html
+++ b/index2.html
@@ -318,7 +318,6 @@ div.mycontainer {
 	<br>
 	<hr>
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who- A Quick One (While He's Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<a href = "adventure.html" style = "color:black"; target = "_blank";>
-<button>New Page Link1</button></a>
+	<img src="https://github.com/CZavos/images/blob/main/Gram%20-%20Xmas.jpg?raw=true" alt="Sample Image" class = lower title = "Click to see more Gram, Again"></a></div>
 </body>
 </html>
