--- a/index2.html
+++ b/index2.html
@@ -36,9 +36,9 @@ img {
 	}
 img.lower {
     		width: 300px;
-		height: 200px;
-    		border-radius: 60%;
-    		border: 5px solid green;
+			height: 200px;
+    		border-radius: 55%;
+    		border: 12px solid green;
     		margin-top: 10px;
 	}
         .table-style1 {
@@ -318,6 +318,7 @@ div.mycontainer {
 	<br>
 	<hr>
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who- A Quick One (While He's Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<img src="https://github.com/CZavos/images/blob/main/Gram%20Henry%20Zavos%20-%20Currium.JPG?raw=true" alt="Sample Image" class = lower title = "Click to see more Gram, Again"></a></div>
+	<br>
+	<img src="https://github.com/CZavos/images/blob/main/Gram%20Henry%20Zavos%20-%20Currium.JPG?raw=true" alt="Sample Image" class = lower title = "Gram and Currium the Cat"></a></div>
 </body>
 </html>
