--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@ h1 {
 .game-text2 {
     white-space: pre-line; /* preserves line breaks */
     height: 175px;
+	width: 60%;
     overflow-y: auto;
     margin-bottom: 10px;
+    height: 50px;
+    border: 4px solid black;
+    padding: 6px;
 }
 
 .game-input2 {
