--- a/index.html
+++ b/index.html
@@ -56,14 +56,7 @@ h1 {
 
 <br>
 	<center>
-<div id="game-text2" 
-	style="
-    width: 60%;
-    height: 50px;
-    overflow-y: auto;
-    border: 4px solid black;
-    padding: 6px;
-">
+<div id="game-text2">
 </div>
 
 <input id="user-input2" type="text" placeholder="Username">
