--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ h1 {
 </div>
 
 <input id="user-input2" type="text" placeholder="Username">
-<button id="submit-btn2">Submit</button></center>
+<button id="submit-btn2">Submit</button>
+</div>
+	</center>
 
 <script src="login.js"></script>
 <br>
