--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h1 {
     padding: 5px 10px;
     margin-left: 5px;
     font-size: 16px;
-    cursor: pointer;
+    cursor: crosshair;
 }
 
 </style>
