--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h1 {
     padding: 5px 10px;
     margin-left: 5px;
     font-size: 16px;
-    cursor: crosshairs;
+    cursor: crosshair;
 }
 
 </style>
