--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ h1 {
 </div>
 
 <input id="user-input2" type="text" placeholder="Username">
-<button id="submit-btn2">Submit</button>
+<button class="submit-btn2">Submit</button>
 </div>
 	</center>
 
