--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ h1 {
 .submit-btn2 {
     padding: 5px 10px;
     margin-left: 5px;
-    font-size: 16px;
-    cursor: crosshair;
+    font-size: 36px;
+    cursor: pointer;
 }
 
 </style>
@@ -54,7 +54,7 @@ h1 {
 </div>
 
 <input id="user-input2" type="text" placeholder="Username">
-<button class="submit-btn2">Submit</button>
+<button id="submit-btn2" class = "submit-btn2">Submit</button>
 </div>
 	</center>
 
