--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ h1 {
 .user-input2 {
     flex: 1;
     padding: 5px;
-    font-size: 36px;
+    font-size: 16px;
 }
 
 .submit-btn2 {
     padding: 5px 10px;
     margin-left: 5px;
-    font-size: 36px;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -50,10 +50,10 @@ h1 {
 
 <br>
 	<center>
-<div id="game-text2">
+<div id="game-text2" class = "game-text2">
 </div>
 
-<input id="user-input2" type="text" placeholder="Username">
+<input id="user-input2" class="user-input2" type="text" placeholder="Username">
 <button id="submit-btn2" class = "submit-btn2">Submit</button>
 </div>
 	</center>
