--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@ h1 {
             font-size: 36px;
         }
 .game-text2 {
-	overflow-y: auto;
+	white-space: pre-line; /* preserves line breaks */
+    height: 120px;
+    overflow-y: auto;
+    margin-bottom: 10px;
 }
 
 .game-input2 {
